--- a/style.css
+++ b/style.css
@@ -1,1 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+body{
+    height: 100vh;
+    background: linear-gradient(45deg, red, blue);
+}
+.wrapper{
+    background:white;
+    border-radius: 5px;
+    padding: 30px;
+    max-width: 400px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+
+.wrapper .icon{
+    height: 110px;
+    width: 110px;
+    background: linear-gradient(45deg, red, blue);
+    border-radius: 50%;
+    font-size: 55px;
+    color: white;
+    line-height: 2em;
+}
